fix: make submission more response on small screen

--- a/src/containers/ResponseDisplay/ResponseDisplay.scss
+++ b/src/containers/ResponseDisplay/ResponseDisplay.scss
@@ -47,6 +47,6 @@
 
 @include media-breakpoint-down(sm) {
   .response-display {
-    min-width: 100vw;
+    width: 100%;
   }
 }
