--- a/src/containers/ReviewModal/ReviewModal.scss
+++ b/src/containers/ReviewModal/ReviewModal.scss
@@ -35,5 +35,9 @@
     .content-block .col {
       padding: 0;
     }
+
+    .content-wrapper {
+      width: 100%;
+    }
   }
 }
